# cell-painting-phenotypic-similarity-search

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: baseline_resnet18.yaml  cpg0002_jump_scope.yaml  dataset_candidates.yaml  phenotypic_search.yaml  subset_rxrx1.yaml
docs/: baseline_cnn_plan.md  cpg0002_initial_findings.md  data.md  dataset_reconnaissance.md  final_report.md  results.md  setup.md
notebooks/: 01_dataset_exploration.ipynb  02_preprocessing_checks.ipynb  03_embedding_visualization.ipynb  04_results_analysis.ipynb
reports/tables/: model_comparison_summary.csv  morphology_chemistry_cases.csv  morphology_chemistry_pairwise.csv  retrieval_example_cases.csv
src/cell_painting_profiling/: __init__.py  config.py
src/cell_painting_profiling/analysis/: compare_experiments.py  morphology_chemistry.py  visualize_results.py
src/cell_painting_profiling/data/: channel_stats.py  dataset.py  download_images.py  inspect_metadata.py  multichannel_dataset.py  normalize_cpg0002.py  s3_listing.py  select_baseline_subset.py  select_image_subset.py  splits.py  transforms.py  validate_images.py
src/cell_painting_profiling/embeddings/: __init__.py  aggregate.py  extract.py  retrieval.py  run_retrieval.py
src/cell_painting_profiling/models/: __init__.py  encoders.py
src/cell_painting_profiling/training/: evaluate.py  forward_smoke_test.py  linear_probe.py  metrics.py  train.py
src/cell_painting_profiling/visualization/: plots.py
tests/: test_aggregate_embeddings.py  test_channel_stats.py  test_compare_experiments.py  test_download_images.py  test_encoders.py  test_extract_embeddings.py  test_forward_smoke_test.py  test_inspect_metadata.py  test_linear_probe.py  test_morphology_chemistry.py  test_multichannel_dataset.py  test_normalize_cpg0002.py  test_retrieval.py  test_run_retrieval.py  test_s3_listing.py  test_select_baseline_subset.py  test_select_image_subset.py  test_splits.py  test_train.py  test_transforms.py  test_visualize_results.py
