[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cell-painting-perturbation-profiling"
version = "0.1.0"
description = "Batch-robust Cell Painting embeddings for perturbation profiling."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Shane Thomas" }
]
dependencies = [
  "torch",
  "torchvision",
  "pandas",
  "numpy",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "umap-learn",
  "PyYAML",
  "tqdm",
  "pillow"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
