[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cell-painting-perturbation-profiling"
version = "0.1.0"
description = "Phenotypic similarity search for drug mechanism discovery with Cell Painting images."
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
  { name = "Shane Thomas" }
]
dependencies = [
  "torch",
  "torchvision",
  "pandas",
  "numpy",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "umap-learn",
  "PyYAML",
  "tqdm",
  "pillow"
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
inspect-cell-painting-metadata = "cell_painting_profiling.data.inspect_metadata:main"
list-cell-painting-s3-prefix = "cell_painting_profiling.data.s3_listing:main"
normalize-cpg0002-metadata = "cell_painting_profiling.data.normalize_cpg0002:main"
select-cpg0002-image-subset = "cell_painting_profiling.data.select_image_subset:main"
select-cpg0002-baseline-subset = "cell_painting_profiling.data.select_baseline_subset:main"
download-cell-painting-images = "cell_painting_profiling.data.download_images:main"
validate-cell-painting-images = "cell_painting_profiling.data.validate_images:main"
run-cnn-forward-smoke-test = "cell_painting_profiling.training.forward_smoke_test:main"
train-baseline-moa-classifier = "cell_painting_profiling.training.train:main"
extract-cell-painting-embeddings = "cell_painting_profiling.embeddings.extract:main"
aggregate-compound-fingerprints = "cell_painting_profiling.embeddings.aggregate:main"
run-compound-retrieval = "cell_painting_profiling.embeddings.run_retrieval:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

